fin du project pierre papier ciseau

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </div>
         <div class="block">
             <div class="link">
-                <img src="./image/instagram.png" alt="Instagram" class="lien">
-                <img src="./image/x.png" alt="Twitter" class="lien">
-                <img src="./image/discord.png" alt="Discord" class="lien">
-                <img src="./image/Facebook.png" alt="Facebook" class="lien">
-                <img src="./image/discord.png" alt="Site" class="lien">
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" rel="noopener noreferrer"><img src="./image/instagram.png" alt="Instagram" class="lien"></a>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" rel="noopener noreferrer"><img src="./image/x.png" alt="Twitter" class="lien"></a>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" rel="noopener noreferrer"><img src="./image/discord.png" alt="Discord" class="lien"></a>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" rel="noopener noreferrer"><img src="./image/Facebook.png" alt="Facebook" class="lien"></a>
+                <a href="https://www.theodinproject.com/dashboard" target="_blank" rel="noopener noreferrer"><img src="./image/discord.png" alt="Site" class="lien"></a>
             </div>
             <div class="fond">
                 <div class="verification"></div>
